...
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="enter message"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recieve"
        app:layout_constraintStart_toEndOf="@+id/sendButton" />

    <Button
        android:id="@+id/recieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
